--- a/playbook/setup.yaml
+++ b/playbook/setup.yaml
@@ -1,35 +1,50 @@
 ---
 - name: setting up k8s cluster
   hosts: all
+  become: true
   tasks:
-    - name: settign the basis on all nodes
-      include_role:
-        name: "{{ item }}"
-      with_items:
-        - /root/roles/pre_setup
-        - /root/roles/pre_k8s_setup
-        - /root/roles/install_crio
-        - /root/roles/install_kube_adm_ctl_let
+#    - name: settign the basis on all nodes
+#      include_role:
+#        name: "{{ item }}"
+#      with_items:
+#        - /root/ansible/k8s/Multimaster-k8s-cluster-setup/roles/pre_setup
+#        - /root/ansible/k8s/Multimaster-k8s-cluster-setup/roles/pre_k8s_setup
+#        - /root/ansible/k8s/Multimaster-k8s-cluster-setup/roles/install_crio
+#        - /root/ansible/k8s/Multimaster-k8s-cluster-setup/roles/install_kube_adm_ctl_let
 
-    - name: Run role on haproxy hosts
-      include_role:
-        name: /root/roles/haproxy
-      when: "'haproxy' in mode"
+#    - name: Run role on haproxy hosts
+#      include_role:
+#        name: /root/ansible/k8s/Multimaster-k8s-cluster-setup/roles/haproxy
+#      when: "'haproxy' in mode"
+
+
+#    - name: get the ip address of haproxy
+#      shell: echo "{{ ansible_host }}"
+#      changed_when: false
+#      when: "'haproxy' in mode"
+#      register: ip
+#
+#
+#    - name: add dummy host
+#      add_host:
+#        name: dummy_haproxy
+#
+#        haproxy_ip: "{{ ip.stdout }}"
+#      when: "'haproxy' in mode"
+
 
     - name: Run role on first host in bamdad hosts group
       include_role:
-        name: your_first_host_role
-      when: "'bamdad' in group_names and inventory_hostname == groups['bamdad'][0]"
+        name: /root/ansible/k8s/Multimaster-k8s-cluster-setup/roles/init_k8s
+      when: "'true' in init_master"
+
 
     - name: Run role on other master hosts
       include_role:
-        name: /root/roles/join_masters
-      when: "'master' in mode and init_master == false"
+        name: /root/ansible/k8s/Multimaster-k8s-cluster-setup/roles/join_masters
+      when: "'master' in mode"
 
     - name: Run role on worker hosts
       include_role:
-        name: your_worker_role
+        name: /root/ansible/k8s/Multimaster-k8s-cluster-setup/roles/join_workers
       when: "'worker' in mode"
-
-
-
