--- a/roles/init_k8s/tasks/main.yaml
+++ b/roles/init_k8s/tasks/main.yaml
@@ -5,15 +5,17 @@
   register: kubeadm_images
   changed_when: "'Image pull complete' in kubeadm_images.stdout"
 
+- name: Display haproxy IP address
+  debug:
+    msg: "The IP address of the 'haproxy' host is {{ hostvars['haproxy']['ansible_host'] }}"
 
 
 - name: Initialize Kubernetes master
-  when: init_master == true
+  when: init_master == 'true'
   command:
-    cmd: kubeadm init --pod-network-cidr=192.168.0.0/16 --control-plane-endpoint {{ hostvars[groups['bamdad'] | selectattr('mode', 'equalto', 'haproxy') | first]['ansible_host'] }}:6443 --upload-certs --v=5
+    cmd: kubeadm init --pod-network-cidr=192.168.0.0/16 --control-plane-endpoint= "{{ hostvars['haproxy']['ansible_host'] }}":6443 --upload-certs --v=5
   register: kubeadm_init_result
-  changed_when: "'control plane has been initialized' not in kubeadm_init_result.stdout"
-
+  changed_when: "'Your Kubernetes control-plane has initialized successfully!' not in kubeadm_init_result.stdout"
 
 
 
