--- a/roles/haproxy/tasks/main.yaml
+++ b/roles/haproxy/tasks/main.yaml
@@ -1,4 +1,57 @@
 ---
+- name: install required packages
+  apt:
+    pkg:
+    - curl
+    - gnupg
+    - ca-certificates
+    state: present
+
+- name: create keyring direcrtory
+  file:
+    path: /etc/apt/keyrings
+    owner: root
+    group: root
+    mode: 0755
+    state: directory
+
+
+
+- name: add docker GPG key
+  apt_key:
+    url: https://download.docker.com/linux/ubuntu/gpg
+    keyring: /etc/apt/keyrings/docker.gpg
+
+
+
+- name: add the repository
+
+  apt_repository:
+    repo: deb [arch=amd64 signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/ubuntu   jammy stable
+    state: present
+
+
+
+- name: update repository
+  apt:
+    update_cache: yes
+
+
+- name: install docker
+  apt:
+    pkg:
+    - docker-ce
+    - docker-ce-cli
+    - containerd.io
+    - docker-buildx-plugin
+    - docker-compose-plugin
+    - python3-pip
+
+
+- name: install dockerpy
+  pip:
+    name: docker
+
 
 
 - name: pull haproxy latest image
@@ -22,6 +75,8 @@
   template:
     dest: /root/haproxy/haproxy.cfg
     src: templates/haproxy.cfg.j2
+  notify:
+  - restart haproxy container
 
 
 
@@ -30,12 +85,16 @@
   docker_container:
     name: haproxy
     image: haproxy:latest
-    state: present
+    state: started
     restart_policy: always
-    exposed_ports:
-      - 6443:6443
-    volumes_from:
+    ports:
+      - '6443:6443'
+    volumes:
       - /root/haproxy/haproxy.cfg:/usr/local/etc/haproxy/haproxy.cfg
+
+
+
+
 
 
 
