--- a/roles/join_masters/tasks/main.yaml
+++ b/roles/join_masters/tasks/main.yaml
@@ -1,13 +1,13 @@
 ---
 - name: Generate a new token
   command: kubeadm token generate
-  delegate_to: groups['bamdad][0]
+  delegate_to: "{{ hostvars[groups['bamdad'][0]]['inventory_hostname'] }}"
   register: token_output
-  become: yes
 
 - name: Get the join command for master nodes
   command:
     cmd: kubeadm token create {{ token_output.stdout }} --print-join-command
+  delegate_to: "{{ hostvars[groups['bamdad'][0]]['inventory_hostname'] }}"
   register: master_join_command_output
   become: yes
 
@@ -19,4 +19,5 @@
 
 - name: Join the master nodes to the Kubernetes cluster
   shell: "{{ master_join_command }} --control-plane"
+  when: ("'master' in mode") and ("'false' in init_master")
 
