--- a/roles/init_k8s/tasks/main.yaml
+++ b/roles/init_k8s/tasks/main.yaml
@@ -13,10 +13,29 @@
 - name: Initialize Kubernetes master
   when: init_master == 'true'
   command:
-    cmd: kubeadm init --pod-network-cidr=192.168.0.0/16 --control-plane-endpoint= "{{ hostvars['haproxy']['ansible_host'] }}":6443 --upload-certs --v=5
+    cmd: kubeadm init --pod-network-cidr=192.168.0.0/16 --control-plane-endpoint "{{ hostvars['haproxy']['ansible_host'] }}":6443 --upload-certs --v=5
   register: kubeadm_init_result
   changed_when: "'Your Kubernetes control-plane has initialized successfully!' not in kubeadm_init_result.stdout"
 
+
+
+- name: craete adirectory in $HOME/.kube/
+  file:
+    path: $HOME/.kube
+    state: directory
+    owner: root
+    group: root
+    mode: 0644
+
+
+- name: copy kubernetes config to home
+  copy:
+    src: /etc/kubernetes/admin.conf
+    dest: $HOME/.kube/config
+    owner: root
+    group: root
+    mode: 0644
+    remote_src: true
 
 
 
