--- a/roles/install_kube_adm_ctl_let/tasks/main.yaml
+++ b/roles/install_kube_adm_ctl_let/tasks/main.yaml
@@ -8,18 +8,25 @@
     owner: root
     group: root
 
+#- name: add google gpg key to the keyring
+#  get_url:
+#    url: https://packages.cloud.google.com/apt/doc/apt-key.gpg
+#    dest: /usr/share/keyrings/kubernetes-archive-keyring.gpg
 
-- name: add google gpg key to the keyring
+- name: Download Google's GPG key
   get_url:
     url: https://packages.cloud.google.com/apt/doc/apt-key.gpg
-    dest: /usr/share/keyrings/kubernetes-archive-keyring.gpg
+    dest: /tmp/apt-key.gpg
 
+
+- name: Add Google's GPG key to the keyring
+  command:
+    cmd: gpg --dearmor -o /usr/share/keyrings/kubernetes-archive-keyring.gpg /tmp/apt-key.gpg
 
 
 - name: add k8s repo to the system
   apt_repository:
     repo: "deb [signed-by=/usr/share/keyrings/kubernetes-archive-keyring.gpg] https://apt.kubernetes.io/ kubernetes-xenial main"
-
 
 
 - name: update repos
